<resources>
    <string name="app_name">ShutMeProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connected">Connected</string>
    <string name="hour_shorted">HR</string>
    <string name="min_shorted">MIN</string>
    <string name="start_time">START TIME</string>
    <string name="end_time">END TIME</string>
    <string name="next">Next</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="privacy_policy_text">This Privacy Policy was last revised on 20 July 2020. 1. Purpose of this Privacy Policy MongoDB, Inc. is committed to protecting your privacy. We have prepared this Privacy Policy to describe to you our practices regarding the Personal Data (as defined below) we collect from users of our website located at MongoDB.com and in connection with our MongoDB products and services (the Products). In addition, this Privacy Policy tells you about your privacy rights and how the law protects you. This website and our Products are not intended for children and we do not knowingly collect data relating to children. It is important that you read this Privacy Policy together with any other privacy notice or fair processing notice we may provide on specific occasions when we are collecting or processing Personal Data about you so that you are fully aware of how and why we are using your data. This Privacy Policy supplements the other notices and is not intended to override them. 2. Controller and Contact Details MongoDB Inc. (collectively referred to as “MongoDB,” “we,” “us” or “our” in this Privacy Policy) is the controller of Personal Data submitted in accordance with this Privacy Policy and is responsible for that Personal Data. We have appointed a data protection officer (DPO) who is responsible for overseeing questions in relation to this Privacy Policy. If you have any questions about this Privacy Policy, including any requests to exercise your legal rights, please contact the DPO using the details set out below. You or your authorized agent may also submit requests to exercise your legal rights by calling 1-866-692-1371, or submitting the webform available at www.mongodb.com/legal/privacy-policy/request-for-deletion 3. Types Of Data We Collect We collect Personal Data and Anonymous Data from you when you visit our site, when you send us information or communications, when you download and use our Products, and when you register for white papers, web seminars, and other events hosted by us. Personal Data means data that identifies, relates to, describes, can be used to contact, or could reasonably be linked directly or indirectly to you, including, for example, identifiers such as your real name, alias, postal address, unique personal identifier, online identifier, Internet Protocol (IP) address, email address, account name, or other similar identifiers; commercial information, including records of products or services purchased, obtained, or considered, or other purchasing or consuming histories or tendencies; Internet or other electronic network activity information, including, but not limited to, browsing history, search history, and information regarding your interaction with an Internet website, application, or advertisement; and any other non-public information about you that is associated with or linked to any of the foregoing data. Anonymous Data means data that is not associated with or linked to your Personal Data; Anonymous Data does not permit the identification of individual persons. We do not collect any Special Categories of Personal Data about you (this includes details about your race or ethnicity, religious or philosophical beliefs, sex life, sexual orientation, political opinions, trade union membership, information about your health and genetic and biometric data). For details about the precise data points we collect and the categories of sources of such collection, please see Sections 4.1 through 4.5 below. 3.1 Personal Data You Provide to Us. We collect Personal Data from you, such as your first and last name, e-mail and mailing addresses, professional title, and company name, and password (identifiers and professional or employment-related information) when you download and install the Products, create an account to log in to our network, or sign-up for our newsletter or other marketing material (internet/electronic activity). When you order Products on our website, we will collect all information necessary to complete the transaction, including your name, credit card information, billing information and shipping information (identifiers and financial information). We also retain information on your behalf, such as files and messages that you store using your account (Internet electronic activity). If you provide us feedback or contact us via e-mail or submit a response to an employment opportunity posted on our website, we will collect your name and e-mail address (identifiers), as well as any other content included in the e-mail, in order to send you a reply, and any information that you submit to us, such as a resume (professional or employment related information). When you participate in one of our surveys, we may collect additional profile information. When you post messages on the message boards of our website, the information contained in your posting will be stored on our servers and other users will be able to see it (Internet/electronic activity). We also collect other types of Personal Data that you provide to us voluntarily, such as operating system and version, Product version numbers, and other requested information if you contact us via e-mail regarding support for the Products (commercial information or Internet/electronic activity). We may also collect Personal Data, such as demographic information, from you via the Products or at other points in our website that state that Personal Data is being collected. 3.2 Personal Data Collected Via Technology. To make our website and Products more useful to you, our servers (which may be hosted by a third party service provider) collect Personal Data from you, including browser type, operating system, IP address (a number that is automatically assigned to your computer when you use the Internet, which may vary from session to session), domain name, and/or a date/time stamp for your visit (identifiers, commercial information or Internet/electronic activity). 3.3 Personal Data Collected Via Cookies. We also use Cookies (as defined below) and navigational data like Uniform Resource Locators (URL) to gather information regarding the date and time of your visit and the solutions and information for which you searched and which you viewed (Internet/electronic activity). Like most technology companies, we automatically gather this Personal Data and store it in log files each time you visit our website or access your account on our network. Cookies are small pieces of information that a website sends to your computer’s hard drive while you are viewing a web site. We may use both session Cookies (which expire once you close your web browser) and persistent Cookies (which stay on your computer until you delete them) to provide you with a more personal and interactive experience on our website. Persistent Cookies can be removed by following Internet browser help file directions. You may choose to refuse or disable Cookies via the settings on your browser, however by doing so, some areas of our website may not work properly. 3.4 Personal and/or Anonymous Data Collected By Third Parties. (a) We may receive Personal and/or Anonymous Data about you from other sources, including companies that provide our Products by way of a co-branded or private-labeled website or companies that offer their products and/or services on our website (Third Party Companies). Those Third Party Companies may supply us with Personal Data, such as your calendars and address book information, in order to help us establish the account. We may add this information to the information we have already collected from you via our website in order to improve the Products we provide. (b) Our provision of a link to any other website or location is for your convenience and does not signify our endorsement of such other website or location or its contents. When you click on such a link, you will leave our site and go to another site. During this process, another entity may collect Personal Data or Anonymous Data from you. (c) We have no control over, do not review, and cannot be responsible for, outside websites or their content. Please be aware that the terms of this Privacy Policy do not apply to these outside websites or content, or to any collection of data after you click on links to such outside websites. You may determine whether or not we are responsible for the content of a website by reviewing the URL and confirming the ownership of the applicable domain by means of a service such as DNSstuff.com. 3.5 Personal Data That We Collect From You About Others. If you decide to create an account for and invite a third party to join our network, we will collect your and the third party\'s names and e-mail addresses (identifiers) in order to send an e-mail and follow up with the third party. You or the third party may contact us at privacy@mongodb.com to request the removal of this information from our database.</string>
    <string name="settings">Settings</string>
    <string name="turn_off_notifications">Turn off notifications</string>
    <string name="notifications">Notifications</string>
    <string name="schedule">Schedule</string>
    <string name="app_list">App list</string>
    <string name="start">Start</string>
    <string name="plans">Plans</string>
</resources>