<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_01"
        android:icon="@drawable/schedule_icon"
        android:title="@string/schedule" />

    <item
        android:id="@+id/navigation_02"
        android:icon="@drawable/list_icon"
        android:title="@string/app_list" />

    <item
        android:id="@+id/navigation_03"
        android:icon="@drawable/vpn_icon"
        android:title="@string/start" />

    <item
        android:id="@+id/navigation_04"
        android:icon="@drawable/shop_icon"
        android:title="@string/plans" />

    <item
        android:id="@+id/navigation_05"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings" />


</menu>
